# operators

./: CMakeLists.txt  README.md  file_io.cpp  main.cpp  performance.xlsx  test.h
lib/: operators.h
src/: blk_operators.cpp  blk_operators.h  file_io.cpp  file_io.h  index_based.cpp  index_based.h  multiway_merge.cpp  multiway_merge.h  one_pass.cpp  one_pass.h  segment.cpp  segment.h  stream.h  table.cpp  table.h
src/stream/: stream_choose.cpp  stream_choose.h  stream_project.cpp  stream_project.h
test/: en.h  epidemic.h  non-functional.h  test.h  test.yaml  test_data.h  vector
test/json/: blk.json  test.json
test/json/index/t1/: 0.blk
test/json/index/t2/: 0.blk
test/json/onepass/t2/: 0.blk  1.blk
test/json/onepass/t2.res/: 0.blk  1.blk  10.blk  100.blk  101.blk  102.blk  103.blk  104.blk  105.blk  106.blk  107.blk  108.blk  109.blk  11.blk  110.blk  111.blk  112.blk  113.blk  114.blk  115.blk  116.blk  117.blk  118.blk  119.blk  12.blk  120.blk  121.blk  122.blk  123.blk  124.blk  125.blk  126.blk  127.blk  13.blk  14.blk  15.blk  16.blk  17.blk  18.blk  19.blk  (+88 more)
test/json/onepass/t3.res/: 0.blk  101.blk  105.blk  109.blk  111.blk  113.blk  115.blk  119.blk  123.blk  125.blk  127.blk  18.blk  22.blk  26.blk  28.blk  4.blk  42.blk  46.blk  50.blk  54.blk  56.blk  73.blk  77.blk  85.blk  87.blk  91.blk  95.blk  97.blk  99.blk
test/json/onepass/td.res/: 1.blk
test/json/pthread/t0.res/: 0.blk  1.blk
test/json/stream/t0.res/: 0.blk  1.blk
test/json/table/t0.res/: 0.blk
test/json/table/t0.srt/: 0.blk
test/simples/: data  test.yml
(+187 files in other folders)
